force-app/main/default/objects/Webinar_Registration__c/Webinar_Registration__c.object-meta.xml
<CustomObject>
    <label>Webinar Registration</label>
    <nameField>
        <displayFormat>WR-{000000}</displayFormat>
        <label>Registration No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webinar Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>