force-app/main/default/objects/Webinar_Registration__c/fields/Webinar__c.field-meta.xml
<CustomField>
    <fullName>Webinar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Webinar</label>
    <referenceTo>Webinar__c</referenceTo>
    <relationshipLabel>Webinar Registrations</relationshipLabel>
    <relationshipName>Webinar_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>