force-app/main/default/objects/Webinar_Registration__c/fields/Webinar_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Webinar_Schedule__c</fullName>
    <label>Webinar Schedule</label>
    <type>Date</type>
</CustomField>